feat: added delete endpoint
