# docs/swagger.yaml
@@ -62,7 +62,7 @@ definitions:
       isPrivate:
         type: boolean
     type: object
-  domain.ErrorResponse:
+  domain.BaseResponse:
     properties:
       message:
         type: string
@@ -166,15 +166,15 @@ paths:
         "400":
           description: Invalid request
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/domain.BaseResponse'
         "401":
           description: Unauthorized - Invalid credentials or user not found
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/domain.BaseResponse'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/domain.BaseResponse'
       summary: User Login
       tags:
       - Authentication
@@ -201,15 +201,15 @@ paths:
         "400":
           description: Bad Request - Invalid or missing parameters in the request
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/domain.BaseResponse'
         "409":
           description: Conflict - User already exists
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/domain.BaseResponse'
         "500":
           description: Internal Server Error - Issue processing the request
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/domain.BaseResponse'
       summary: User Signup
       tags:
       - Authentication
@@ -333,7 +333,7 @@ paths:
         "404":
           description: Profile Not Found
           schema:
-            $ref: '#/definitions/domain.ErrorResponse'
+            $ref: '#/definitions/domain.BaseResponse'
       security:
       - BearerAuth: []
       summary: User Me Endpoint
